--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="/assets/css/style.css"
+      href="assets/css/style.css"
     />
   </head>
   <body>
@@ -75,11 +75,9 @@
                 </li>
                 <li>
                   <a class="nav-mob-toggle" id="nav-mob-toggle" href="#">
-                    <img
-                      src="/assets/img/hamburger.svg"
-                      alt="menu"
-                      fill="#ccc"
-                    />
+                    <span></span>
+                    <span></span>
+                    <span></span>
                   </a>
                 </li>
               </ul>
