Add media query to menu icon

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     ><i class="icon icon--search--dark"></i
                   ></a>
                 </li>
-                <li>
+                <li class="nav-menu-icon">
                   <a class="nav-mob-toggle" id="nav-mob-toggle" href="#">
                     <span></span>
                     <span></span>
