--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
           </header>
         </article>
       </section>
+      <div class="wrapper">
       <section class="latest ml-3">
 
     
@@ -456,6 +457,7 @@
         </div>
 
 </section>
+</div>
     </main>
   </body>
 </html>
